ChatsDelete handler - Part 1
