# docs/swagger.yaml
@@ -14,6 +14,15 @@ definitions:
     - chat_name
     - users
     type: object
+  dto.ChatDelete:
+    properties:
+      chat_ids:
+        items:
+          type: integer
+        type: array
+    required:
+    - chat_ids
+    type: object
   dto.ChatGet:
     properties:
       user_id:
@@ -97,6 +106,13 @@ definitions:
       name:
         type: string
     type: object
+  entity.DeletedChats:
+    properties:
+      chat_id:
+        type: integer
+      result:
+        type: string
+    type: object
   entity.Message:
     properties:
       created_at:
@@ -134,6 +150,10 @@ definitions:
       chats_list:
         items:
           $ref: '#/definitions/entity.Chat'
+        type: array
+      del_chats_list:
+        items:
+          $ref: '#/definitions/entity.DeletedChats'
         type: array
       error:
         type: string
@@ -296,20 +316,24 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/entity.Chat'
+          $ref: '#/definitions/dto.ChatDelete'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: integer
+            $ref: '#/definitions/handler.Response'
         "400":
           description: Bad Request
           schema:
             $ref: '#/definitions/handler.Response'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/handler.Response'
+        "405":
+          description: Method Not Allowed
           schema:
             $ref: '#/definitions/handler.Response'
         "500":
